--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,25 @@
-<resources>
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+<resources xmlns:tools="http://schemas.android.com/tools">
+
+    <style name="Text">
+        <item name="android:textSize">@dimen/text_regular</item>
+        <item name="android:textColor">@color/text_primary</item>
     </style>
+
+    <style name="Text.ExtraLight" parent="Text" tools:ignore="UnusedResources">
+        <item name="android:fontFamily">sans-serif-thin</item>
+    </style>
+
+    <style name="Text.Light" parent="Text" tools:ignore="UnusedResources">
+        <item name="android:fontFamily">sans-serif-light</item>
+    </style>
+
+    <style name="Text.Regular" parent="Text" tools:ignore="UnusedResources">
+        <item name="android:fontFamily">sans-serif-medium</item>
+    </style>
+
+    <style name="Text.SemiBold" parent="Text">
+        <item name="android:fontFamily">sans-serif-condensed-medium</item>
+    </style>
+
 
 </resources>
